...
    <string name="FemaleUser">Female</string>
    <string name="BinaryUser">Binary</string>
    <string name="FluidUser">Fluid</string>
    <string name="OtherUser">Other</string>

    <string name="ChildUser">Child</string>
    <string name="YoungUser">Young</string>
    <string name="ottaa_actualizado" translatable="false">OTTAA Updated</string>
    <string name="OldUser">Adult</string>
    <string name="allow_ottaa_app_the_following_permissions">Allow OTTAA App the following permissions?</string>
    <string name="this_lets_ottaa_app_to_store_and_access_information_from_your_device">This lets OTTAA app to store and access information from your device.</string>
    <string name="location">Location</string>
    <string name="this_lets_ottaa_app_to_access_the_location">This lets OTTAA app to access the location</string>
...
    <string name="permisos_fotos_denegados">If you do not grant the permission you can not download the photos</string>
    <string name="translating_languaje">Translating…</string>
    <string name="child" translatable="false">Niño</string>
    <string name="varon" translatable="false">Varón</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">"This password is too short      "</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="strTutorialGame3">What is the winner Pictogram</string>
    <string name="strTutorialGame4">This is the winner picto</string>
...
    <string name="premium_report_description">With the premium version you will have access to a detailed report of the use you make of OTTAA Project, it allows you to measure your progress</string>
    <string name="speed_summary">Customized the velocity about the Screen-Scanning or the click-Time</string>
    <string name="tutorial01">Touch one or more pictograms to create a sentence as long as you want. The pictograms are automatically related and you will always have one more pictogram to add. </string>
    <string name="tutorial02">Once the phrase is created, touch the OTTAA logo to speak aloud or using the share icon, you can send your phrase through the most used social networks.</string>
    <string name="tutorial03">"In OTTAA you have access to thousands of pictograms to talk about whatever you want, find the Picto Gallery in the lower left corner of the main screen.  "</string>
    <string name="tutorial04">Enter the games section to learn by playing. OTTAA has didactic games to learn vocabulary, concepts and much more. Also, more games will be available soon!</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="playandlearn">Play and Learn</string>
    <string name="accessthousandof">Access thousands of pictograms</string>
    <string name="talktotheworld">Talk to the world</string>
    <string name="createyourphrases">Create your phrases</string>
    <string name="sip_and_puff" translatable="false">sip_and_puff</string>
...
