...
            android:background="#FFF"
            card_view:cardCornerRadius="7dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/containerCardview"
                android:padding="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    card_view:layout_constraintStart_toStartOf="parent"
...
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/RadioGroup1"
                    card_view:layout_constraintBottom_toTopOf="@id/sign_in_button"
                    android:id="@+id/RadioGroup2"
                    android:orientation="horizontal">
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
...
