...
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_siguiente"
        app:layout_constraintVertical_weight="3" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
