...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/ChildUser" />

            <RadioButton
                android:id="@+id/radioButtonJoven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/YoungUser" />

...
