<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    >
          <com.stonefacesoft.pictogramslibrary.view.PictoView
                            android:id="@+id/Option1"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginStart="@dimen/interpicto_margin"
                            app:Imagen="2"
                            app:Texto="Hola"
                            android:contentDescription="Picto"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintDimensionRatio="w,1:1"

              />



</androidx.constraintlayout.widget.ConstraintLayout>