...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/horizontalScrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraintPictos"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintVertical_weight="3">

...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/containerBottomMasPictos">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:elevation="20dp"
        android:src="@drawable/icono_ottaa"
        android:tint="@color/White"
...
